fix(settings): Allow dark mode fix(activity-calendar): Fix split pane color, in dark mode

--- a/src/theme/_theme.variables.scss
+++ b/src/theme/_theme.variables.scss
@@ -107,6 +107,7 @@ html.dark {
   --app-form-field-label-color: #949494;
   --app-form-field-disabled-label-color: #7d7d7d;
   --mat-select-panel-background-color: #2a2a2a;
+  --as-gutter-background-color: var(--ion-toolbar-background);
 
   ion-menu#menu {
     --ion-item-text-color-selected: var(--ion-color-secondary100-contrast);
